k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: coils
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
