k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: coils
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
